tests/miz/pass/types/pass_type_elaboration_right_parenthesized_reserved_variable_membership_001.miz
reserve x for set;
theorem RightParenthesizedReservedVariableMembershipPayloadBoundary: x in (x);
