tests/miz/fail/parser/fail_parser_set_comprehension_missing_close_001.miz
theorem MissingClose: IsSmall({ x where x is set);
